feat: admin command tab completer